--- a/src/main/resources/fxml/student/overallData.fxml
+++ b/src/main/resources/fxml/student/overallData.fxml
@@ -8,6 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
+            style="-fx-background-color: #ffffff"
             fx:controller="com.hnust.controller.student.OverallDataController"
             prefHeight="400.0" prefWidth="600.0">
     <Label>总体信息查看</Label>
