--- a/src/main/resources/fxml/subject/subjectList.fxml
+++ b/src/main/resources/fxml/subject/subjectList.fxml
@@ -9,7 +9,7 @@
              style="-fx-background-color: #FFF;-fx-border-width: 0" fx:id="container">
         <HBox alignment="CENTER" spacing="10" AnchorPane.leftAnchor="20" AnchorPane.topAnchor="0">
             <padding>
-                <Insets left="20" />
+                <Insets left="20" top="20"/>
             </padding>
             <Label style="-fx-font-size: 1.2em;" text="所属课程" />
             <TextField style="-fx-end-margin: 50">
@@ -30,7 +30,7 @@
             </Button>
             <Button styleClass="btn,btn-default" text="重置" prefWidth="120.0" style="-fx-font-size: 1.0em"/>
         </HBox>
-        <HBox spacing="20" alignment="CENTER" AnchorPane.topAnchor="50" AnchorPane.leftAnchor="0">
+        <HBox spacing="20" alignment="CENTER" AnchorPane.topAnchor="65" AnchorPane.leftAnchor="0">
             <padding>
                 <Insets left="40" />
             </padding>
@@ -38,7 +38,7 @@
             <Button styleClass="btn,btn-default" style="-fx-font-size: 1.0em;"  prefWidth="120.0" text="导入题目"></Button>
         </HBox>
         <VBox AnchorPane.leftAnchor="30" AnchorPane.topAnchor="110" AnchorPane.bottomAnchor="0" fx:id="vbox1" AnchorPane.rightAnchor="20">
-            <TableView style="-fx-background-color: red" fx:id="tableSize" VBox.vgrow="ALWAYS" maxHeight="Infinity" minHeight="560" minWidth="500">
+            <TableView style="-fx-background-color: red" fx:id="tableSize" VBox.vgrow="ALWAYS" maxHeight="Infinity" minHeight="300" minWidth="500">
                 <columns>
                     <TableColumn text="序号"></TableColumn>
                     <TableColumn text="内容"></TableColumn>
@@ -54,10 +54,7 @@
                     <TableColumn text="操作"></TableColumn>
                 </columns>
             </TableView>
-            <HBox style="-fx-background-color: red" alignment="CENTER" spacing="10">
-                <VBox.margin>
-                    <Insets top="20"></Insets>
-                </VBox.margin>
+            <HBox alignment="CENTER" spacing="10">
                 <Pagination></Pagination>
                 <Label text="跳 至" />
                 <TextField fx:id="toPage" prefWidth="45" />
