--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -138,7 +138,7 @@
                         </HBox.margin>
                     </ImageView>
                 </HBox>
-                <!--header4->item1+item2-->
+                <!--header4->item1+item2+item3-->
                 <HBox alignment="CENTER_RIGHT">
                     <Text fill="WHITE" onMouseClicked="#itemClick" styleClass="itemFont" text="试卷列表" />
                     <!--visible="false"-->
@@ -155,6 +155,18 @@
                     <Text fill="WHITE" onMouseClicked="#itemClick" styleClass="itemFont" text="手动生成试卷" />
                     <!--visible="false"-->
                     <ImageView fx:id="header4Item2Image" fitHeight="30.0" fitWidth="25.0" pickOnBounds="true" visible="false">
+                        <image>
+                            <Image url="@../image/main/itemClick.png" />
+                        </image>
+                        <HBox.margin>
+                            <Insets left="50.0" />
+                        </HBox.margin>
+                    </ImageView>
+                </HBox>
+                <HBox alignment="CENTER_RIGHT">
+                    <Text fill="WHITE" onMouseClicked="#itemClick" styleClass="itemFont" text="自动生成试卷" />
+                    <!--visible="false"-->
+                    <ImageView fx:id="header4Item3Image" fitHeight="30.0" fitWidth="25.0" pickOnBounds="true" visible="false">
                         <image>
                             <Image url="@../image/main/itemClick.png" />
                         </image>
