--- a/src/main/resources/fxml/subject/subjectList.fxml
+++ b/src/main/resources/fxml/subject/subjectList.fxml
@@ -3,20 +3,21 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 
+<?import java.lang.String?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.hnust.controller.subject.SubjectListController"
-             style="-fx-background-color: #FFF;-fx-border-width: 0" fx:id="container">
+            style="-fx-background-color: #FFF;-fx-border-width: 0" fx:id="container">
         <HBox alignment="CENTER" spacing="10" AnchorPane.leftAnchor="20" AnchorPane.topAnchor="0">
             <padding>
                 <Insets left="20" top="20"/>
             </padding>
             <Label style="-fx-font-size: 1.2em;" text="所属课程" />
-            <TextField style="-fx-end-margin: 50">
+            <ComboBox prefWidth="230" fx:id="comb">
                 <HBox.margin>
                     <Insets right="50.0" />
                 </HBox.margin>
-            </TextField>
+            </ComboBox>
             <Label text="题目搜索" style="-fx-font-size: 1.2em;"/>
             <TextField >
                 <HBox.margin>
