--- a/src/main/resources/css/newCss.css
+++ b/src/main/resources/css/newCss.css
@@ -799,6 +799,7 @@
 }
 /*comboBox鼠标放上时颜色*/
 .combo-box-base:hover {
+    -fx-background-color:#FFF;
     -fx-border-color: #40A9FF;
     -fx-background-radius: 5px;
     -fx-border-radius: 5px;
