手动生动试卷

--- a/src/main/resources/css/generatePaper.css
+++ b/src/main/resources/css/generatePaper.css
@@ -1,6 +1,17 @@
-.ball{
+.ball_active{
     -fx-background-color: #1890FF;
     -fx-border-color: #1890FF;
+    -fx-border-width:1;
+    -fx-border-radius: 30;
+    -fx-background-radius: 30;
+    -fx-pref-height: 60;
+    -fx-pref-width: 60;
+    -fx-min-height: 60;
+    -fx-min-width: 60;
+}
+.ball_inactive{
+    -fx-background-color: #E2E2E2;
+    -fx-border-color: #E2E2E2;
     -fx-border-width:1;
     -fx-border-radius: 30;
     -fx-background-radius: 30;
@@ -41,4 +52,33 @@
     -fx-pref-width: 100;
     -fx-pref-height: 40;
     -fx-font-size: 1.05em;
+}
+.paper_info{
+    -fx-font-size: 1.2em;
+    -fx-font-family: "MicrosoftYaHei";
+}
+.paper_title{
+    -fx-background-color: #868686;
+}
+.paper_title_bg{
+    -fx-font-size: 1.6em;
+    -fx-font-weight: bold;
+}
+.paper_title_sm{
+    -fx-font-size: 1.0em;
+}
+.question{
+    -fx-font-size: 1.2em;
+    -fx-font-weight: bold;
+}
+.question_answer{
+    -fx-font-size: 1.1em;
+    -fx-font-weight: bold;
+    -fx-text-fill: #737373;
+}
+.btn_vbg{
+    -fx-font-size: 1.1em;
+    -fx-pref-width: 130px;
+    -fx-pref-height: 45px;
+    -fx-font-family: "MicrosoftYaHei";
 }
